Added Documentation + markdown file
Signed-off-by: Marcel Hesselbach <marcelhesselbach@live.de>